--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ a:link { text-decoration: none; }
 .menu_activities[rel="progettazione_definitiva"]
 {
 	top: 37.6%;
-    right: -209px;
+	right: -209px;
 	background-color: #666;
 }
 
@@ -1425,6 +1425,23 @@ a:link { text-decoration: none; }
 	cursor: pointer;
 }
 
+.download_1
+{
+	display: inline-block;
+	padding: 1em 16px;
+	border: 1px solid #808080;
+	background-color: transparent;
+	margin: 1em 16px;
+	outline: none;
+	color: #999
+}
+
+.download_1:hover
+{
+	background-color: #666;
+	cursor: pointer;
+}
+
 .etichetta
 {
 	font-family: "GothamCondensedLight", sans-serif;
@@ -1741,7 +1758,7 @@ a:link { text-decoration: none; }
 	top: 45%;
 	transform: perspective(1px) translateY(-50%);
 	color: #fff;
-	width: 24%;
+	width: /*24%;*/100%;
 	height: auto;
 	text-align: center;
 	margin: 0 auto;
@@ -1759,6 +1776,8 @@ a:link { text-decoration: none; }
 {
 	display: block;
 	position: relative;
+	width: 24%;
+	margin: 0 auto;
 	font-family: "GothamCondensedLight", sans-serif;
 	font-size: 1.286rem;
 	padding: 1em 16px;
@@ -2411,10 +2430,10 @@ label[for="accettazione"]:hover { cursor: pointer; }
 	display: block;
 	position: relative;
 	width: calc(100% - 4em);
-	height: auto;
+	height: /*auto;*/ 20em;
 	max-height: calc(100% - 5.5em);
 	padding: 2em 2em 0;
-	overflow: hidden;
+	overflow: auto;
 }
 
 /* Files */
@@ -2503,6 +2522,13 @@ label[for="accettazione"]:hover { cursor: pointer; }
 	opacity: 0;
 }
 
+#container_toolbar
+{
+	display: inline-block;
+	position: relative;
+	float: right;
+}
+
 /* Carica */
 
 .carica
@@ -2582,10 +2608,10 @@ label[for="accettazione"]:hover { cursor: pointer; }
 	display: block;
 	position: relative;
 	width: calc(100% - 4em);
-	height: auto;
+	height: /*auto;*/ 25em;
 	max-height: calc(100% - 4em);
 	padding: 2em 2em 0;
-	overflow: hidden;
+	overflow: auto;
 }
 
 /* Categorie */
@@ -2982,7 +3008,75 @@ label[for="accettazione"]:hover { cursor: pointer; }
 
 /* Cookies ******************************/
 
-#banner_cookies { display: none; }
+#banner_cookies
+{
+	display: none;
+	position: fixed;
+	bottom: 0;
+	top: auto;
+	width: 100%;
+	height: auto;
+	background-color: #ccc;
+	z-index: 1000;
+	font-family: "GothamCondensedLight", sans-serif;
+	letter-spacing: 2px;
+	font-size: .9rem;
+	text-align: center;
+	color: #333;
+}
+
+#banner_cookies p
+{
+	margin: 0;
+	padding: 1em 16px;
+}
+
+#banner_cookies a { color: #7F1001; }
+
+#banner_cookies a:hover { opacity: .7; }
+
+#chiudi_banner
+{
+	width: 48px;
+	height: 48px;
+	display: block;
+	position: absolute;
+	top: 1.5em;
+	right: 16px;
+	bottom: auto;
+	left: auto;
+	background-image: url("../img/chiudi_popup.svg");
+	background-size: 100%;
+	background-position: 0 0;
+	background-attachment: scroll;
+	background-repeat: no-repeat;
+}
+
+#chiudi_banner:hover { cursor: pointer; }
+
+#cookies_summary
+{
+	overflow: auto;
+	height: auto;
+	min-height: auto;
+}
+
+#cookies_summary .intestazione
+{
+	top: 0;
+	transform: none;
+}
+
+#cookies_summary a { color: #7F1001; }
+
+#cookies_summary a:hover { opacity: .7; }
+
+.s1 strong
+{
+	font-weight: bolder;
+	color: #000;
+	text-transform: uppercase;
+}
 
 /* Transizioni ******************************/
 .linea_1
@@ -3117,6 +3211,8 @@ label[for="accettazione"]:hover { cursor: pointer; }
 
 .download { transition: all .3s ease-in-out; }
 
+.download_1 { transition: all .3s ease-in-out; }
+
 #torna_su { transition: all .3s ease-in-out; }
 
 .menu_activities { transition: right .5s ease-out; }
@@ -3176,6 +3272,10 @@ label[for="accettazione"]:hover { cursor: pointer; }
 #form_modifica input { transition: all .3s ease-in-out; }
 
 #chiudi_profilo { transition: all .3s ease-in-out; }
+
+#banner_cookies a { transition: all .3s ease-in-out; }
+
+#cookies_summary a { transition: all .3s ease-in-out; }
 
 .titolo_descrizione
 {
@@ -3403,6 +3503,110 @@ label[for="accettazione"]:hover { cursor: pointer; }
 }
 
 /* Inizio Mobile ******************************/
+
+@media all and (max-width: 1826px) {
+
+#avatar { width: calc(50% - 24px); }
+
+.modifica_pulsante { padding: .7em 16px; }
+
+.info_profilo { font-size: .8rem; }
+
+#notifica_toolbar
+{
+	width: 45%;
+	font-size: .8rem;
+}
+
+.file { padding: 0 1em 2em 0; }
+
+.carica { margin-right: 16px; }
+}
+
+@media all and (max-width: 1672px) {
+
+.info_profilo
+{
+	width: calc(50% - 16px);
+	padding-right: 1em;
+}
+
+.file { padding: 0 1.7em 2em 0; }
+
+#notifica_toolbar
+{
+	width: 40%;
+	font-size: .7rem;
+}
+}
+
+@media all and (max-width: 1544px) {
+
+.modifica_pulsante { font-size: .7rem; }
+
+.file { padding: 0 1.5em 2em 0; }
+
+#notifica_toolbar
+{
+	width: 38%;
+	line-height: .9rem;
+}
+}
+
+/* Inizio 15" ******************************/
+
+@media all and (max-width: 1440px) {
+
+.dingbat_1 { min-width: auto; }
+
+.dingbat_2 { min-width: auto; }
+
+.menu_activities[rel="rilievo"] { top: 26.3%; }
+
+.menu_activities[rel="progettazione_preliminare"] { top: 32.7%; }
+
+.menu_activities[rel="progettazione_definitiva"] { top: 39%; }
+
+.menu_activities[rel="progettazione_esecutiva"] { top: 45.3%; }
+
+.box_link:hover .box_cornice
+{
+	height: 9.5em;
+	min-height: 9.5em;
+}
+
+#avatar
+{
+	width: calc(50% - 16px);
+	height: 6em;
+}
+
+.modifica_pulsante { padding: .7em 8px; }
+
+#logo { top: 33.5%; }
+
+#menu_voci { margin: 12em auto 14em; }
+
+#container_recapiti span { width: 32%; }
+
+.carica { padding: .7em 8px; }
+
+.elimina { padding: .7em 8px; }
+
+#notifica_toolbar { width: 42%; }
+
+.info_profilo
+{
+	width: calc(50% - 12px);
+	padding-right: .5em;
+}
+
+.catalogo_admin_elemento .file_nome { font-size: .7rem; }
+}
+
+.catalogo_admin_elemento { padding: .5em 32px; }
+
+/* Fine 15" ******************************/
 
 @media all and (max-width: 600px) {
 
